change in color theme

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 
 <body>
     <div class="page">
-        <div class="scroll-msg">
-            <div>Hello 👋</div>
-            <div>scroll me</div>
+        <main class="scroll-msg">
+            <div class="text-primary">creative developer</div>
+            <div class="text-secondary">scroll me</div>
             <div class="arrow-animated-wrapper">
                 <div class="arrow-animated">&darr;</div>
             </div>
-        </div>
+        </main>
     </div>
     <canvas id="gooey-overlay"></canvas>
     <div class="text-overlay">
-        <p>
+        <!-- <p>
             <a href="https://linkedin.com/in/ksenia-kondrashova/" target="_blank">linkedIn</a> | <a
                 href="https://codepen.io/ksenia-k" target="_blank">codepen</a> | <a
                 href="https://twitter.com/uuuuuulala" target="_blank">twitter (X)</a>
-        </p>
+        </p> -->
     </div>
 
 
@@ -178,7 +178,7 @@
     </script>
 
     <!-- External JS libraries -->
-   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+    <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 
     <!-- Main JS  -->
