--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>veedevx | Portfolio</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css">
 </head>
 
 <body>
     <div class="page">
         <main class="scroll-msg">
-            <div class="text-primary">creative developer</div>
-            <div class="text-secondary">scroll me</div>
+            <div class="hero-title">creative developer</div>
+            <div class="hero-copy">Front-End Developer & Designer</div>
             <div class="arrow-animated-wrapper">
                 <div class="arrow-animated">&darr;</div>
             </div>
@@ -183,6 +184,9 @@
 
     <!-- Main JS  -->
     <script src="./index.js" type="module"></script>
+
+    <!-- Custom Cursor  -->
+    <script src="https://unpkg.com/kursor"></script>
 
 </body>
 
