--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="page">
+        
         <main class="scroll-msg">
             <div class="hero-title">creative developer</div>
             <div class="hero-copy">Front-End Developer & Designer</div>
@@ -21,6 +22,13 @@
     </div>
     <canvas id="gooey-overlay"></canvas>
     <div class="text-overlay">
+        <nav>
+            <a href="#" ><img src="./assets/collect-svgrepo-com.svg" alt="homelogo" class="home-logo"></a>
+            <a class="projects" href="#">Projects</a>
+            <a href="./about.html" class="about">About</a>
+            <a href="mailto:hello@veedevx.in" class="email">hello@veedevx.in</a>
+        </nav>
+
         <!-- <p>
             <a href="https://linkedin.com/in/ksenia-kondrashova/" target="_blank">linkedIn</a> | <a
                 href="https://codepen.io/ksenia-k" target="_blank">codepen</a> | <a
@@ -178,15 +186,19 @@
 
     </script>
 
-    <!-- External JS libraries -->
+    <!-- GSAP -->
     <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+
+    <!-- Custom Cursor  -->
+    <script src="https://unpkg.com/kursor"></script>
 
     <!-- Main JS  -->
     <script src="./index.js" type="module"></script>
 
-    <!-- Custom Cursor  -->
-    <script src="https://unpkg.com/kursor"></script>
+
+
+    
 
 </body>
 
